Tut08/src/examples/tut08/bad/Spoke.java
package examples.tut08.bad;

public class Spoke extends BicycleComponent {

	public Spoke(float cost, float weight) {
		super(cost, weight);
	}

}
